--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: windows-latest
     steps:
      - name: pulling git repository
-     - uses: actions/checkout@v2
-     - name: "Say hello to badri"
+       uses: actions/checkout@v2
+     - name: Say hello to badri
        run : echo "Hello Badri Narayanan"
