--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 pytz==2021.1
-pywin32==301
+# pywin32==301
 pywinpty==1.1.4
 PyYAML==6.0
 pyzmq==22.2.1
