--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       DATABASE_HOSTNAME : ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT : ${{secrets.DATABASE_PORT}}
-      DB_PASSWORD_SECRET : ${{secrets.DB_PASSWORD_SECRET}}
+      DATABASE_PASSWORD_SECRET : ${{secrets.DB_PASSWORD_SECRET}}
       DATABASE_NAME : ${{secrets.DATABASE_NAME}}
       DB_USERNAME_SECRET : ${{secrets.DB_USERNAME_SECRET}}
       SECRET_KEY : ${{secrets.SECRET_KEY}}
