--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy code
 on : [push,pull_request]
 
 jobs:
-  job1:
+  Build:
     environment:
       name: testing
     env:
@@ -49,19 +49,28 @@ jobs:
 
     #Building docker images 
 
-     -  name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    #  -  name: Login to Docker Hub
+    #     uses: docker/login-action@v2
+    #     with:
+    #       username: ${{ secrets.DOCKER_HUB_USERNAME }}
+    #       password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-     -  name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    #  -  name: Set up Docker Buildx
+    #     uses: docker/setup-buildx-action@v2
 
-     -  name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi:latest
+    #  -  name: Build and push
+    #     uses: docker/build-push-action@v4
+    #     with:
+    #       context: .
+    #       file: ./Dockerfile
+    #       push: true
+    #       tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi:latest
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: [Build]
+
+    steps:
+      -name: Deploying Some Stuffs
+       echo "Deploying application stuffs"
+
